After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762596 - Can't cd into root of rofiles-fuse mount
Can't cd into root of rofiles-fuse mount
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-02-24 11:07 UTC by Alexander Larsson
Modified: 2016-02-24 19:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rofiles-fuse: Handle operations on the root (886 bytes, patch)
2016-02-24 11:17 UTC, Alexander Larsson
accepted-commit_now Details | Review

Description Alexander Larsson 2016-02-24 11:07:43 UTC
I can't chdir into the root of the mount:

$ mkdir x
$ mkdir x/y
$ mkdir z
$ rofiles-fuse x z
$ cd z
bash: cd: z: No such file or directory
$ cd z/y
$ cd ..
bash: cd: ..: No such file or directory
$ cd ../..

Here is the syscall failure:

23483 stat("/home/alex/x/z", {st_mode=S_IFDIR|0755, st_size=6, ...}) = 0
23483 chdir("/home/alex/x/z")           = -1 ENOENT (No such file or directory)

Not sure whats causing the failure.
Comment 1 Alexander Larsson 2016-02-24 11:17:31 UTC
Created attachment 322227 [details] [review]
rofiles-fuse: Handle operations on the root

ENSURE_RELPATH breaks when path is "/". In that case we need
to return "." instead of "".
Comment 2 Alexander Larsson 2016-02-24 11:17:48 UTC
Figured it out...
Comment 3 Colin Walters 2016-02-24 16:28:25 UTC
Review of attachment 322227 [details] [review]:

LGTM.
Comment 4 Alexander Larsson 2016-02-24 19:45:19 UTC
Attachment 322227 [details] pushed as 6c285d2 - rofiles-fuse: Handle operations on the root